# hypermarket

./: .gitignore  LICENSE  README.md  finalplan.md  followupplan.md  proj.md  projidea.md
backend/src/: main.rs  schema.rs
backend/src/handlers/: markets.rs  orders.rs  trades.rs  user_positions.rs  user_stats.rs
contracts/: Cargo.toml
contracts/src/: auth.rs  events.rs  hyperliquid_client.rs  lib.rs  market.rs  market_factory.rs  oracle.rs
contracts/src/examples/: market_flow.rs
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  metadata.ts  page.tsx
frontend/app/components/: ActiveOrdersPanel.tsx  AdvancedOrderForm.tsx  MarketCharts.tsx  MarketList.tsx  PositionManagement.tsx  TradingInterface.tsx
frontend/app/contexts/: WalletContext.tsx
frontend/app/markets/[id]/: page.tsx
frontend/app/services/: contracts.ts  marketService.ts
frontend/app/types/: market.ts
frontend/src/components/: MarketCard.tsx  TradingInterface.tsx
frontend/src/hooks/: useLocalStorage.ts  useMarket.ts  useWallet.ts
frontend/src/types/: index.ts
temp_next/: package.json
