[package]
name = "hypermarket-contracts"
version = "0.1.0"
edition = "2021"
authors = ["HyperMarket Team"]
description = "Smart contracts for the HyperMarket prediction market platform"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hyperliquid SDK and related dependencies
hyperliquid-rust = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust.git", branch = "main" }
ethers = { version = "2.0", features = ["ws", "rustls"] }
reqwest = { version = "0.11", features = ["json"] }

# Smart contract essentials
uint = { version = "0.9", default-features = false }
hex = "0.4"
sha3 = "0.10"
thiserror = "1.0"

# Async runtime and futures
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Logging and error handling
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.8"